[gd_scene load_steps=7 format=3 uid="uid://8fys1mswxb58"]

[ext_resource type="Script" uid="uid://b5e3be8uv6pj" path="res://assets/script/main.gd" id="1_1bvp3"]
[ext_resource type="Texture2D" uid="uid://coij8gqexsam8" path="res://assets/imgs/小店贴图.jpg" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://dwcxrdid66mp3" path="res://assets/imgs/收银台.png" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://d23nlcvb4rht3" path="res://assets/scence/food.tscn" id="3_h2yge"]
[ext_resource type="Script" uid="uid://cq0xn4elyrdsf" path="res://assets/scence/order_window.gd" id="4_gmgkc"]
[ext_resource type="PackedScene" uid="uid://d165c2c5l2k8a" path="res://assets/scence/client.tscn" id="5_lquwl"]

[node name="Main" type="Node"]
script = ExtResource("1_1bvp3")

[node name="小店贴图" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(2.26549, 2)
texture = ExtResource("1_ig7tw")

[node name="OrderWindow1" type="Node2D" parent="."]
script = ExtResource("4_gmgkc")
client_scence = ExtResource("5_lquwl")

[node name="ClientTimer1" type="Timer" parent="OrderWindow1"]

[node name="OrderWindow2" type="Node2D" parent="."]
script = ExtResource("4_gmgkc")
client_scence = ExtResource("5_lquwl")

[node name="ClientTimer2" type="Timer" parent="OrderWindow2"]

[node name="OrderWindow3" type="Node2D" parent="."]
script = ExtResource("4_gmgkc")
client_scence = ExtResource("5_lquwl")

[node name="ClientTimer3" type="Timer" parent="OrderWindow3"]

[node name="收银台" type="Sprite2D" parent="."]
position = Vector2(639.875, 468.75)
scale = Vector2(0.319983, 0.126692)
texture = ExtResource("2_0xm2m")

[node name="Food" parent="." instance=ExtResource("3_h2yge")]
position = Vector2(96, 80)

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="fullhouse" from="OrderWindow1" to="." method="_on_order_window_1_fullhouse"]
[connection signal="timeout" from="OrderWindow1/ClientTimer1" to="." method="_on_order_window_1_client_generate"]
[connection signal="fullhouse" from="OrderWindow2" to="." method="_on_order_window_2_fullhouse"]
[connection signal="timeout" from="OrderWindow2/ClientTimer2" to="." method="_on_order_window_2_client_generate"]
[connection signal="fullhouse" from="OrderWindow3" to="." method="_on_order_window_3_fullhouse"]
[connection signal="timeout" from="OrderWindow3/ClientTimer3" to="." method="_on_order_window_3_client_generate"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
